Update readme and demo

--- a/index.html
+++ b/index.html
@@ -3,54 +3,69 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Dropdown Demo</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="jquery.dropdown.css">
 	<style>
 		/* Demo styles */
-		body {
+		.page {
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 		}
 
-		.container {
+		.page__content {
 			margin: 50px auto;
 			max-width: 800px;
-			text-align: center;
 		}
+
+		.section {
+			margin-bottom: 3em;
+		}
+
+		.section__title {
+			font-size: 1.3em;
+		}
+
 	</style>
 </head>
-<body>
+<body class="page">
 
-	<div class="container">
-		<div data-dropdown-role="dropdown" class="dropdown">
-			<button data-dropdown-role="trigger" class="dropdown__trigger">Dropdown<span class="dropdown__caret"></span></button>
-			<div data-dropdown-role="drop-menu" class="dropdown__menu">
-				<ul>
-					<li tabindex="0" class="dropdown__item">Item 1</li>
-					<li tabindex="0" class="dropdown__item">Item 2</li>
-					<li tabindex="0" class="dropdown__item">Item 3</li>
-					<li tabindex="0" class="dropdown__item">Item 4</li>
-					<li tabindex="0" class="dropdown__item">Item 5</li>
-					<li tabindex="0" class="dropdown__item">Item 6</li>
-					<li tabindex="0" class="dropdown__item">Item 7</li>
-					<li tabindex="0" class="dropdown__item">Item 8</li>
-				</ul>
+	<div class="page__content">
+		<section class="section">
+			<h2 class="section__title">Normal dropdown</h2>
+			<div data-dropdown-role="dropdown" class="dropdown">
+				<button data-dropdown-role="trigger" class="dropdown__trigger">Dropdown<span class="dropdown__caret"></span></button>
+				<div data-dropdown-role="drop-menu" class="dropdown__menu">
+					<ul>
+						<li tabindex="0" class="dropdown__item">Item 1</li>
+						<li tabindex="0" class="dropdown__item">Item 2</li>
+						<li tabindex="0" class="dropdown__item">Item 3</li>
+						<li tabindex="0" class="dropdown__item">Item 4</li>
+						<li tabindex="0" class="dropdown__item">Item 5</li>
+						<li tabindex="0" class="dropdown__item">Item 6</li>
+						<li tabindex="0" class="dropdown__item">Item 7</li>
+						<li tabindex="0" class="dropdown__item">Item 8</li>
+					</ul>
+				</div>
 			</div>
-		</div>
+		</section>
 
-		<div data-dropdown-role="dropdown" class="dropdown">
-			<button data-dropdown-role="trigger" class="dropdown__trigger">Dropdown<span class="dropdown__caret"></span></button>
-			<div data-dropdown-role="drop-menu" class="dropdown__menu">
-				<ul>
-					<li tabindex="0" class="dropdown__item">Item 1</li>
-					<li tabindex="0" class="dropdown__item">Item 2</li>
-					<li tabindex="0" class="dropdown__item">Item 3</li>
-					<li tabindex="0" class="dropdown__item">Item 4</li>
-					<li tabindex="0" class="dropdown__item">Item 5</li>
-					<li tabindex="0" class="dropdown__item">Item 6</li>
-					<li tabindex="0" class="dropdown__item">Item 7</li>
-					<li tabindex="0" class="dropdown__item">Item 8</li>
-				</ul>
+		<section class="section">
+			<h2 class="section__title">Disabled dropdown</h2>
+			<div data-dropdown-role="dropdown" class="dropdown dropdown_disabled">
+				<button data-dropdown-role="trigger" class="dropdown__trigger">Dropdown<span class="dropdown__caret"></span></button>
+				<div data-dropdown-role="drop-menu" class="dropdown__menu">
+					<ul>
+						<li tabindex="0" class="dropdown__item">Item 1</li>
+						<li tabindex="0" class="dropdown__item">Item 2</li>
+						<li tabindex="0" class="dropdown__item">Item 3</li>
+						<li tabindex="0" class="dropdown__item">Item 4</li>
+						<li tabindex="0" class="dropdown__item">Item 5</li>
+						<li tabindex="0" class="dropdown__item">Item 6</li>
+						<li tabindex="0" class="dropdown__item">Item 7</li>
+						<li tabindex="0" class="dropdown__item">Item 8</li>
+					</ul>
+				</div>
 			</div>
-		</div>
+		</section>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
