--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
 	<link rel="stylesheet" href="jquery.dropdown.css">
 	<style>
 		/* Demo styles */
+
+		svg {
+			fill: currentColor;
+		}
+
 		.page {
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+			color: #111;
+		}
+
+		.page__header {
+			padding-bottom: 70px;
 		}
 
 		.page__content {
-			margin: 50px auto;
+			margin: 0 auto;
 			max-width: 800px;
 		}
 
@@ -24,15 +34,75 @@
 			font-size: 1.3em;
 		}
 
+		.header {
+			text-align: center;
+		}
+
+		.button {
+			display: inline-block;
+			text-decoration: none;
+			cursor: pointer;
+			padding: 0;
+			border: transparent;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			-webkit-transition: 125ms all ease-in-out;
+			-moz-transition: 125ms all ease-in-out;
+			-ms-transition: 125ms all ease-in-out;
+			-o-transition: 125ms all ease-in-out;
+			transition: 125ms all ease-in-out;
+		}
+
+		.button__text,
+		.button__icon {
+			vertical-align: middle;
+			display: inline-block;
+		}
+
+		.button_github {
+			color: #111;
+		}
+
+		.button_github:hover {
+			color: #0d7ff9;
+		}
 	</style>
 </head>
 <body class="page">
+
+	<header class="page__header header">
+		<h1 class="header__title">Simple Accessible jQuery Dropdown Plugin</h1>
+		<a href="https://github.com/zoxon/jquery-dropdown" target="_blank" title="View on GitHub" class="button button_github header__button-view">
+			<span class="button__text">View on GitHub</span>
+			<svg height="16" width="16" class="octicon octicon-mark-github button__icon" viewBox="0 0 16 16" version="1.1" aria-hidden="true">
+				<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+			</svg>
+		</a>
+	</header>
 
 	<div class="page__content">
 		<section class="section">
 			<h2 class="section__title">Normal dropdown</h2>
 			<div data-dropdown-role="dropdown" class="dropdown">
 				<button data-dropdown-role="trigger" class="dropdown__trigger">Dropdown<span class="dropdown__caret"></span></button>
+				<div data-dropdown-role="drop-menu" class="dropdown__menu">
+					<ul>
+						<li tabindex="0" class="dropdown__item">Item 1</li>
+						<li tabindex="0" class="dropdown__item">Item 2</li>
+						<li tabindex="0" class="dropdown__item">Item 3</li>
+						<li tabindex="0" class="dropdown__item">Item 4</li>
+						<li tabindex="0" class="dropdown__item">Item 5</li>
+						<li tabindex="0" class="dropdown__item">Item 6</li>
+						<li tabindex="0" class="dropdown__item">Item 7</li>
+						<li tabindex="0" class="dropdown__item">Item 8</li>
+					</ul>
+				</div>
+			</div>
+
+			<div data-dropdown-role="dropdown" class="dropdown">
+				<button data-dropdown-role="trigger" class="dropdown__trigger">Another Dropdown<span class="dropdown__caret"></span></button>
 				<div data-dropdown-role="drop-menu" class="dropdown__menu">
 					<ul>
 						<li tabindex="0" class="dropdown__item">Item 1</li>
